Fix unnecessary typehead usage on mobile
Since Im not using typeahead on mobile, the event listeners should never be created else, typeahead will still query in the background.
Removed autocomplete from the input to improve usability.
Fixed styles on the search input

--- a/src/public/sass/component/_typeaheadjs.scss
+++ b/src/public/sass/component/_typeaheadjs.scss
@@ -39,8 +39,12 @@ span.twitter-typeahead {
         .tt-dataset {
             padding: 0 5px;
         }
-        @include media-breakpoint-down(md) {
-            display: none !important;
-        }
     }
+}
+
+input.typeahead {
+    width: 100%;
+    background-color: $gray-900 !important;
+    border: 1px solid $gray-700;
+    color: $white;
 }
